--- a/src/style.css
+++ b/src/style.css
@@ -1,8 +1,23 @@
 #app {
-    color: #2c3e50;
-    font-family: Avenir, Helvetica, Arial, sans-serif;
-    -moz-osx-font-smoothing: grayscale;
-    -webkit-font-smoothing: antialiased;
-    margin-top: 60px;
-    text-align: center;
+  color: #2c3e50;
+  font-family: Avenir, Helvetica, Arial, sans-serif;
+  -moz-osx-font-smoothing: grayscale;
+  -webkit-font-smoothing: antialiased;
+  margin-top: 60px;
+  text-align: center;
+}
+
+#result {
+  margin: 20px auto;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.load {
+  width: 500px;
+  border-bottom: 1px solid black;
+  background-color: skyblue;
+  margin-bottom: 5px;
 }
